[project]
name = "map2path"
version = "0.1.0"
description = "Converts a bitmap image with single-path line into an SVG."
readme = "README.md"
authors = [
    { name = "Marlon Richert", email = "marlonrichert@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "pillow>=11.3.0",
    "scikit-image>=0.24.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
