[project]
name = "map2path"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marlon Richert", email = "marlonrichert@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
